# simpleYoloObjectDetection

./: .gitignore  CMakeLists.txt  README.md  downloadYoloFiles.sh  main.cpp
